sol/2014_p1_f2_memoria.txt
Jogo da memória
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,2 s
Limite de memória permitido 1.0 GB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2014f2p1_memoria.cpp: In function ‘int main()’:
2014f2p1_memoria.cpp:42:9: error: ‘memset’ was not declared in this scope
   42 |         memset(dist, -1, sizeof(dist));
      |         ^~~~~~
2014f2p1_memoria.cpp:4:1: note: ‘memset’ is defined in header ‘<cstring>’; did you forget to ‘#include <cstring>’?
    3 | #include <queue>
  +++ |+#include <cstring>
    4 | using namespace std;
2014f2p1_memoria.cpp:43:19: error: ‘class std::vector<int>’ has no member named ‘index_of’
   43 |         bfs(cards.index_of(i+1)-1, N);
      |                   ^~~~~~~~